RESOLVED FIXED119198
Include <stdio.h> to declare perror()
https://bugs.webkit.org/show_bug.cgi?id=119198
Summary Include <stdio.h> to declare perror()
Andy Estes
Reported 2013-07-28 18:21:55 PDT
Include <stdio.h> to declare perror()
Attachments
Patch (1.16 KB, patch)
2013-07-28 18:24 PDT, Andy Estes
kling: review+
Andy Estes
Comment 1 2013-07-28 18:24:18 PDT
Andy Estes
Comment 2 2013-07-28 20:07:17 PDT
Note You need to log in before you can comment on or make changes to this bug.