Tools/DumpRenderTree/mac/PerlSupport/DumpRenderTreeSupport.c
@@ -23,6 +23,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
+#include <stdio.h>
 #include <sys/sysctl.h>
 
 int processIsCrashing(int pid)
